# primegourdon

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  LISEZMOI.md  README.md  gourdon.md  run.sh
.github/workflows/: selftest.yml
cmake/: div32_probe.cpp
include/: gourdon.hpp  int_types.hpp  phi.hpp  phi_pi.hpp  pitable.hpp  sieve.hpp  util.hpp
src/: int_types.cpp  main.cpp  phi.cpp  phi_pi.cpp  pitable.cpp  sieve.cpp
src/gourdon/: AC.cpp  B.cpp  D.cpp  Phi0.cpp  Sigma.cpp  gourdon_terms.cpp  gparams.hpp  gterms.hpp  pi_gourdon.cpp
tests/: segpi_proto.cpp  selftest.cpp
